@startuml mascota 

class Mascota
class Alimento
class Carne
class Juguete
Class Vida
Class Baño
Class Punto
Class Emocion 
Class Energizante 
Class Sueño
Class Ropa
Class Balon
Class Felicidad
Class Jugador
Class Dinero
Class Posion
Class Habitacion
Class Lampara
Class Dueño 


Mascota o-- Alimento 

Pelota --|> Juguete 

Mascota o-- Juguete 

Carne --|> Alimento  

Mascota *-- Vida 

Mascota o-- Baño

Jugador *-- Punto

Emocion --* Mascota

Felicidad --|> Emocion 

Tristeza --|> Emocion 

Mascota o-- Habitacion

Habitacion *-- Lampara

Balon --|> Juguete

Mascota o-- Posion 

Energizante --|> Posion

Jugador o-- Punto

Punto --|> Dinero 

Baño --|> Necesidad 

Comer --|> Necesidad

Mascota o-- Ropa 

Sueño --|> Necesidad

Mascota *-- Dueño 


